Clean up CSS + Fix alignment bug
Since changing the font size of the article header, the optical alignment was off a little, so adjusted the padding-top to pull it down to align closely with the toolbar buttons

Removed redudant title style

--- a/App/css/default.css
+++ b/App/css/default.css
@@ -665,25 +665,9 @@ signedIn-articleList .win-itemcontainer .win-focusedoutline {
     width: 288px;
 }
 
-.articleViewer-title {
-    -ms-grid-column: 1;
-    -ms-grid-column-align: start;
-    -ms-grid-row-align: center;
-    width: 100%;
-    overflow: hidden;
-    font-size: 20px;
-    text-wrap: none;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
 @media all and (max-width: 640px) {
     .articleViewer-toolbar-container {
         -ms-grid-row-align: end;
-    }
-
-    .articleViewer-title {
-        display: none;
     }
 
     .articleViewer-toolbar {
